@@ -18,7 +18,6 @@ module.exports = function(grunt) {
 						'License: <%= pkg.license.name %>\n' +
 						'License URI: <%= pkg.license.url %>\n' +
 						'Text Domain: bootstrap-for-contact-form-7\n' +
-						'Domain Path: /languages/\n' +
 						'*/',
 		fileheader:		'/**\n' +
 						' * @package CF7BS\n' +
@@ -29,9 +28,6 @@ module.exports = function(grunt) {
 		clean: {
 			scripts: [
 				'assets/scripts.min.js'
-			],
-			translation: [
-				'languages/bootstrap-for-contact-form-7.pot'
 			]
 		},
 
@@ -91,34 +87,6 @@ module.exports = function(grunt) {
 					to: '<%= fileheader %>'
 				}]
 			}
-		},
-
-		makepot: {
-			translation: {
-				options: {
-					mainFile: 'bootstrap-for-contact-form-7.php',
-					domainPath: '/languages',
-					exclude: [ 'vendor/.*' ],
-					potComments: 'Copyright (c) 2014-<%= grunt.template.today("yyyy") %> <%= pkg.author.name %>',
-					potFilename: 'bootstrap-for-contact-form-7.pot',
-					potHeaders: {
-						'language-team': '<%= pkg.author.name %> <<%= pkg.author.email %>>',
-						'last-translator': '<%= pkg.author.name %> <<%= pkg.author.email %>>',
-						'project-id-version': '<%= pkg.name %> <%= pkg.version %>',
-						'report-msgid-bugs-to': '<%= pkg.homepage %>',
-						'x-generator': 'grunt-wp-i18n 0.5.3',
-						'x-poedit-basepath': '.',
-						'x-poedit-language': 'English',
-						'x-poedit-country': 'UNITED STATES',
-						'x-poedit-sourcecharset': 'uft-8',
-						'x-poedit-keywordslist': '__;_e;_x:1,2c;_ex:1,2c;_n:1,2; _nx:1,2,4c;_n_noop:1,2;_nx_noop:1,2,3c;esc_attr__; esc_html__;esc_attr_e; esc_html_e;esc_attr_x:1,2c; esc_html_x:1,2c;',
-						'x-poedit-bookmars': '',
-						'x-poedit-searchpath-0': '.',
-						'x-textdomain-support': 'yes'
-					},
-					type: 'wp-plugin'
-				}
-			}
 		}
 
 	});
@@ -128,17 +96,11 @@ module.exports = function(grunt) {
 	grunt.loadNpmTasks('grunt-contrib-uglify');
 	grunt.loadNpmTasks('grunt-banner');
 	grunt.loadNpmTasks('grunt-text-replace');
-	grunt.loadNpmTasks('grunt-wp-i18n');
 
 	grunt.registerTask('scripts', [
 		'clean:scripts',
 		'jshint',
 		'uglify'
-	]);
-
-	grunt.registerTask('translation', [
-		'clean:translation',
-		'makepot:translation'
 	]);
 
 	grunt.registerTask('plugin', [
@@ -153,7 +115,6 @@ module.exports = function(grunt) {
 
 	grunt.registerTask('build', [
 		'scripts',
-		'translation',
 		'plugin'
 	]);
 };
