@@ -33,7 +33,6 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-banner": "~0.2.3",
-    "grunt-text-replace": "~0.4.0",
-    "grunt-wp-i18n": "~0.5.3"
+    "grunt-text-replace": "~0.4.0"
   }
 }
