@@ -1,6 +1,8 @@
 == Changelog ==
 
 = 1.3.0 =
+* Enhanced: a notice in the admin is now shown if the plugin cannot be initialized
+* Enhanced: language files no longer bundled in the plugin; now completely relies on language packs
 * Fixed: form element errors are now displayed correctly on horizontal forms and hidden on inline forms
 * Fixed: plugin constant definitions now happen on 'plugins_loaded' hook
 * Fixed: typo 'dismissable' in alert setting / class is now 'dismissible'
